[project]
name = "ref-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Stabley", email = "ben.stabley@nv5.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ref_store = "ref_store:main.main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
